--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -1,3 +1,12 @@
-<h1>Log in <i class="fa fa-sign-in fa-fw"></i></h1>
-
-<?php echo $this->form; ?>
+<div class="row">
+    <div class="col-md-4 col-sm-6 col-xs-10 col-md-offset-4 col-sm-offset-3 col-xs-offset-1">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h2>Log in <i class="fa fa-sign-in"></i></h2>
+            </div>
+            <div class="panel-body">
+                <?php echo $this->form; ?>
+            </div>
+        </div>
+    </div>
+</div>
