Massive update on ACL. Getting invalid login details.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -18,6 +18,7 @@
         <div class="container">
             <?php echo $this->partial('partials/navigation.phtml', array('keyword' => $this->keyword)); ?>
             <?php echo $this->title ? '<div class="page-header"><h2>' . $this->title . ' <small>' . $this->subtitle . '</small></h2></div>' : ''; ?>
+        	<?php echo $this->flash(); ?>
             <?php echo $this->layout()->content; ?>
             <footer>
                 <?php echo $this->partial('partials/footer.phtml', array('mode' => $this->mode)); ?>
