--- a/application/layouts/scripts/partials/navigation.phtml
+++ b/application/layouts/scripts/partials/navigation.phtml
@@ -14,10 +14,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <?php if (Zend_Auth::getInstance()->hasIdentity()): ?>
-                <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'add', 'page' => null, 'search' => null, 'order' => null), null, true);?>"><i class="fa fa-plus fa-fw"></i> Add Model</a></li>
-                <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'ranking'), null, true); ?>"><i class="fa fa-random fa-fw"></i> Ranking</a></li>
-                <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'stats'), null, true); ?>"><i class="fa fa-bar-chart-o fa-fw"></i> Stats</a></li>
-                <li><a href="<?php echo $this->url(array('controller' => 'web-resource', 'action' => 'index'), null, true); ?>"><i class="fa fa-chain fa-fw"></i> Web Resources</a></li>
+                <li><a href="<?php echo $this->url(array('controller' => 'index', 'action' => 'index'), null, true);?>">Index</a></li>
                 <?php endif; ?>
             </ul>
 
