Removed debugging info

--- a/application/layouts/scripts/partials/navigation.phtml
+++ b/application/layouts/scripts/partials/navigation.phtml
@@ -1,4 +1,5 @@
 <!-- Static navbar -->
+<div class="row">
 <div class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -43,5 +44,6 @@
 
         </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
+</div>
 </div>
 
