--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -7,24 +7,24 @@
     <div class="col-md-4">
         <h3>ACL Rules</h3>
 
-        <h5>Guests</h5>
+        <h5><i class="fa fa-check text-success"></i> Guests</h5>
         <ul>
-            <li>Can only log in.</li>
+            <li><i class="fa fa-check text-success"></i> Can only log in.</li>
         </ul>
 
-        <h5>Interviewee</h5>
+        <h5><i class="fa fa-check text-success"></i> Interviewee</h5>
         <ul>
             <li>Can take tests</li>
         </ul>
 
-        <h5>Staff</h5>
+        <h5><i class="fa fa-check text-success"></i> Staff</h5>
         <p>Can do what interviewees can, plus...</p>
         <ul>
             <li>Create Categories</li>
             <li>Create Questions in Categories</li>
         </ul>
 
-        <h5>Managers</h5>
+        <h5><i class="fa fa-check text-success"></i> Managers</h5>
         <p>Can do what employees can, plus...</p>
         <ul>
             <li>Publish Questions (Approve)</li>
