--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -9,7 +9,7 @@
 
         <h5>Guests</h5>
         <ul>
-            <li>Can only log in.</li>
+            <li><i class="fa fa-check text-success"></i> Can only log in.</li>
         </ul>
 
         <h5>Interviewee</h5>
