--- a/application/views/scripts/question/index.phtml
+++ b/application/views/scripts/question/index.phtml
@@ -11,7 +11,17 @@
                 </tr>
             </thead>
             <tbody>
-
+                <?php foreach ($this->questions as $question): ?>
+                <tr>
+                    <td><?php echo $question->name; ?></td>
+                    <td>
+                        <div class="btn-group pull-right" role="group">
+                            <a href="<?php echo $this->url(array('controller' => 'question', 'action' => 'edit', 'id' => $question->id), null, true); ?>" class="btn btn-default btn-xs">Edit</a>
+                            <a href="<?php echo $this->url(array('controller' => 'question', 'action' => 'delete', 'id' => $question->id), null, true); ?>" class="btn btn-default btn-xs">Delete</a>
+                        </div>
+                    </td>
+                </tr>
+            <?php endforeach; ?>
 
             </tbody>
         </table>
@@ -19,3 +29,6 @@
         <a href="<?php echo $this->url(array('controller' => 'question', 'action' => 'edit'), null, true); ?>" class="btn btn-default btn-sm pull-right">Add Question</a>
     </div>
 </div>
+
+
+
