Updates to question. Added Delete functionality

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -54,14 +54,14 @@
         </ul>
         <h5>Question</h5>
         <ul>
-            <li>Must have a category</li>
-            <li>Add - Adds a question, assign to a category.</li>
-            <li>Edit - Edit a question.</li>
-            <li>Delete - Delete a question.</li>
+            <li><i class="fa fa-check text-success"></i> Must have a category</li>
+            <li><i class="fa fa-check text-success"></i> Add - Adds a question, assign to a category.</li>
+            <li><i class="fa fa-check text-success"></i> Edit - Edit a question.</li>
+            <li><i class="fa fa-check text-success"></i> Delete - Delete a question.</li>
             <li>Publish - Approves the question to be taken in a test. <em>Managers</em></li>
         </ul>
 
-        <small>All delete actions will be soft deletes</small>
+        <small><i class="fa fa-check text-success"></i> All delete actions will be soft deletes</small>
     </div>
 
     <div class="col-md-4">
@@ -84,8 +84,8 @@
         </ul>
         <h5>Question</h5>
         <ul>
-            <li>Many different types of questions</li>
-            <li>Assigned to one category</li>
+            <li>Many different levels of questions</li>
+            <li><i class="fa fa-check text-success"></i> Assigned to one category</li>
             <li>Estimated time to be completed</li>
             <li>Average time to be completed</li>
         </ul>
