--- a/application/views/scripts/question/index.phtml
+++ b/application/views/scripts/question/index.phtml
@@ -8,6 +8,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Category</th>
+                    <th>Level</th>
                     <th><span class="pull-right">Action</span></th>
                 </tr>
             </thead>
@@ -16,6 +17,7 @@
                 <tr>
                     <td><?php echo $question->name; ?></td>
                     <td><?php echo $question->category->name; ?></td>
+                    <td><?php echo App_Model_QuestionTable::$_level[$question->level]; ?></td>
                     <td>
                         <div class="btn-group pull-right" role="group">
                             <a href="<?php echo $this->url(array('controller' => 'question', 'action' => 'edit', 'id' => $question->id), null, true); ?>" class="btn btn-default btn-xs">Edit</a>
