--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -58,6 +58,9 @@
             <li><i class="fa fa-check text-success"></i> Add - Adds a question, assign to a category.</li>
             <li><i class="fa fa-check text-success"></i> Edit - Edit a question.</li>
             <li><i class="fa fa-check text-success"></i> Delete - Delete a question.</li>
+            <li><i class="fa fa-check text-success"></i> Version tracking enabled</li>
+            <li>Version revert <em>Staff</em></li>
+            <li>Author - Need to set the user id on the question</li>
             <li>Publish - Approves the question to be taken in a test. <em>Managers</em></li>
         </ul>
 
