--- a/application/views/scripts/user/index.phtml
+++ b/application/views/scripts/user/index.phtml
@@ -1,1 +1,36 @@
 <h1>Users</h1>
+
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <?php if ($this->users): ?>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Role</th>
+                    <th><span class="pull-right">Action</span></th>
+                </tr>
+            </thead>
+            <tbody>
+                <?php foreach ($this->users as $user): ?>
+                <tr>
+                    <td><?php echo $user->firstname; ?> <?php echo $user->surname; ?></td>
+                    <td><?php echo $user->role; ?></td>
+                    <td>
+                        <div class="btn-group pull-right" role="group">
+                            <a href="<?php echo $this->url(array('controller' => 'user', 'action' => 'edit', 'id' => $user->id), null, true); ?>" class="btn btn-default btn-xs">Edit</a>
+                            <a href="<?php echo $this->url(array('controller' => 'user', 'action' => 'delete', 'id' => $user->id), null, true); ?>" class="btn btn-default btn-xs">Delete</a>
+                        </div>
+                    </td>
+                </tr>
+            <?php endforeach; ?>
+
+            </tbody>
+        </table>
+        <?php endif; ?>
+        <a href="<?php echo $this->url(array('controller' => 'user', 'action' => 'edit'), null, true); ?>" class="btn btn-default btn-sm pull-right">Add User</a>
+    </div>
+</div>
+
+
+
