--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -20,8 +20,8 @@
         <h5><i class="fa fa-check text-success"></i> Staff</h5>
         <p>Can do what interviewees can, plus...</p>
         <ul>
-            <li>Create Categories</li>
-            <li>Create Questions in Categories</li>
+            <li><i class="fa fa-check text-success"></i> Create Categories</li>
+            <li><i class="fa fa-check text-success"></i> Create Questions in Categories</li>
         </ul>
 
         <h5><i class="fa fa-check text-success"></i> Managers</h5>
@@ -29,6 +29,8 @@
         <ul>
             <li>Publish Questions (Approve)</li>
             <li>Add Users</li>
+            <li><i class="fa fa-check text-success"></i> List and Edit Users</li>
+            <li>Reset Other users passwords</li>
             <li>Assign interviewees test categories</li>
             <li>Assign time for the test to be allowed</li>
             <li>See Test results</li>
@@ -87,7 +89,7 @@
         </ul>
         <h5>Question</h5>
         <ul>
-            <li>Many different levels of questions</li>
+            <li><i class="fa fa-check text-success"></i> Many different levels of questions</li>
             <li><i class="fa fa-check text-success"></i> Assigned to one category</li>
             <li>Estimated time to be completed</li>
             <li>Average time to be completed</li>
