Adding show action to Category to show questions for the selected category. Incomplete.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -28,9 +28,9 @@
         <p>Can do what employees can, plus...</p>
         <ul>
             <li>Publish Questions (Approve)</li>
-            <li>Add Users</li>
+            <li><i class="fa fa-check text-success"></i> Add Users</li>
             <li><i class="fa fa-check text-success"></i> List and Edit Users</li>
-            <li>Reset Other users passwords</li>
+            <li><i class="fa fa-check text-success"></i> Reset Other users passwords</li>
             <li>Assign interviewees test categories</li>
             <li>Assign time for the test to be allowed</li>
             <li>See Test results</li>
