--- a/application/views/scripts/category/index.phtml
+++ b/application/views/scripts/category/index.phtml
@@ -17,6 +17,7 @@
                     <td>
                         <div class="btn-group pull-right" role="group">
                             <a href="<?php echo $this->url(array('controller' => 'category', 'action' => 'edit', 'id' => $category->id), null, true); ?>" class="btn btn-default btn-xs">Edit</a>
+                            <a href="<?php echo $this->url(array('controller' => 'category', 'action' => 'show', 'category' => $category->id), null, true); ?>" class="btn btn-default btn-xs">Show</a>
                             <a href="<?php echo $this->url(array('controller' => 'category', 'action' => 'delete', 'id' => $category->id), null, true); ?>" class="btn btn-default btn-xs">Delete</a>
                         </div>
                     </td>
