--- a/application/views/scripts/user/index.phtml
+++ b/application/views/scripts/user/index.phtml
@@ -7,6 +7,7 @@
             <thead>
                 <tr>
                     <th>Name</th>
+                    <th>Email Address</th>
                     <th>Role</th>
                     <th><span class="pull-right">Action</span></th>
                 </tr>
@@ -15,6 +16,7 @@
                 <?php foreach ($this->users as $user): ?>
                 <tr>
                     <td><?php echo $user->firstname; ?> <?php echo $user->surname; ?></td>
+                    <td><?php echo $user->emailaddress; ?></td>
                     <td><?php echo $user->role; ?></td>
                     <td>
                         <div class="btn-group pull-right" role="group">
