Updated the index page view for smaller screens

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -4,7 +4,7 @@
 <p>This is the competence test. This is the plan.</p>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-sm-4">
         <h3>ACL Rules</h3>
 
         <h5><i class="fa fa-check text-success"></i> Guests</h5>
@@ -37,7 +37,7 @@
         </ul>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-sm-4">
         <h3>Action Structure</h3>
 
         <h5>Test</h5>
@@ -69,7 +69,7 @@
         <small><i class="fa fa-check text-success"></i> All delete actions will be soft deletes</small>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-sm-4">
         <h3>Model Structure</h3>
 
         <h5>User</h5>
